--- a/Common_Function.ipynb
+++ b/Common_Function.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "341679d1-e77e-4f90-b499-d52507db1eef",
    "metadata": {},
    "outputs": [
@@ -10,17 +10,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15\n"
+      "18\n"
      ]
     }
    ],
    "source": [
-    "print(3 * 5)  # multiplication"
+    "print(3 * 6)  # multiplication"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -339,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
