Add Git configuration and branch management instructions to Jupyter notebook

--- a/git.ipynb
+++ b/git.ipynb
@@ -4,10 +4,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Clone a repository from github\n",
-    "In the folder to be cloned, open **git bash** and run\n",
+    "- ### Config\n",
+    "`git config --global user.name \"huazhilianwu\"`\n",
+    "\n",
+    "`git config --global user.email \"huazhilianwu@gmail.com\"`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### Branch\n",
+    "`git branch *branch-name*`\n",
+    "\n",
+    "`git switch -c *branch-name*`\n",
+    "\n",
+    "`git merge *branch*`\n",
+    "\n",
+    "`git branch -d *branch-name*`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### Create a repistory\n",
+    "`git init`\n",
+    "\n",
+    "`git remote add origin *SSH key from github*`\n",
     "\n",
     "`git clone *SSH key from github*`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### Upload\n",
+    "`git pull`"
    ]
   }
  ],
