Refactor Common_Function notebook and add new Jupyter notebooks for virtual environments and UV commands

--- a/Common_Function.ipynb
+++ b/Common_Function.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "341679d1-e77e-4f90-b499-d52507db1eef",
    "metadata": {},
    "outputs": [
@@ -10,46 +10,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(3 * 6)  # multiplication"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "18\n",
+      "2.3333333333333335\n",
       "2\n"
      ]
     }
    ],
    "source": [
-    "print(7 // 3)  # floor division\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(5 % 3)  # modulus"
+    "print(3 * 6)  # multiplication\n",
+    "print(7/3)  # division"
    ]
   },
   {
@@ -61,17 +30,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2\n",
+      "1\n",
       "(2, 1)\n"
      ]
     }
    ],
    "source": [
-    "print(divmod(7, 3))  # division and modulus\n"
+    "print(7//3)  # integer division\n",
+    "print(7 % 3)  # modulus\n",
+    "print(divmod(7, 3))  # division and modulus"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -85,12 +58,12 @@
    ],
    "source": [
     "print(3 ** 2)\n",
-    "print(pow(3,2))  # exponentiation\n"
+    "print(pow(3,2))  # exponentiation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,12 +77,12 @@
    ],
    "source": [
     "print(pow(3,2,mod=4))  # exponentiation with modulus\n",
-    "print(pow(3,-1,mod=4))  # negative exponentiation with modulus\n"
+    "print(pow(3,-1,mod=4))  # negative exponentiation with modulus"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -125,31 +98,30 @@
    "source": [
     "print(3 < 5)\n",
     "print(3 == 5)\n",
-    "print(3 != 5)  # comparison\n"
+    "print(3 != 5)  # comparison"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n"
+      "12 12\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "a=3; b=4; c=a*b; \n",
-    "print(c)  # multiple statements in one line"
+    "a,b=3,4; d=c=a*b \n",
+    "print(c,d)  # multiple statements in one line"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -162,14 +134,13 @@
     }
    ],
    "source": [
-    "\n",
     "print(2*'brac'+'ket')  # string concatenation\n",
     "print('don\\'t',\" or \",\"don't\")  # escape character"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -183,14 +154,13 @@
     }
    ],
    "source": [
-    "\n",
     "print(\"line1\\nline2\")  # new line\n",
     "print(r\"line1\\nline2\")  # raw string"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +172,6 @@
     }
    ],
    "source": [
-    "\n",
     "print(\"string1\\\n",
     "string2\")  # string concatenation"
    ]
@@ -253,37 +222,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 0, 4, 5]\n",
+      "[3, 5]\n",
       "1\n",
-      "5\n",
-      "[1, 2, 3, 4, 5]\n",
-      "[1, 2, 3, 4, 5, 6]\n",
-      "[1, 2, 3, 4, 5]\n",
-      "[1, 2, 3]\n",
-      "3\n",
+      "6\n",
+      "[1, 2, -3, 4, 5, 6]\n",
+      "[1, 2, -3, 4, 5, 6, 6]\n",
+      "[1, 2, -3, 4, 5, 6]\n",
+      "[1, 2, -3, 4]\n",
+      "4\n",
       "[[1, 'f'], [3, 4]]\n",
       "4\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "list=[1,2,0,4,5];print(list);print(list[0]);print(list[-1])  # list, mutable\n",
-    "list[2]=3;print(list);list.append(6);print(list);list.pop();print(list)  # list modification\n",
-    "list[-2:]=[];print(list);print(len(list))  # length of list\n",
+    "list=[1,2,3,4,5,6];print(list[2:-1:2]) # list slicing from pos 2 to pos -1(excluded) with step 2\n",
+    "print(list[0]);print(list[-1])  # list, mutable\n",
+    "list[2]=-3;print(list);list.append(6);print(list);list.pop();print(list)  # list modification\n",
+    "list[-2:]=[];print(list);print(len(list))  # list shrink\n",
     "list1=[1,'f'];list2=[3,4];list=[list1,list2];print(list);print(list[1][1])  # list nesting"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -320,6 +289,118 @@
    "source": [
     "a=complex('3+4j');b=complex(3,4);c=complex('-Infinity+NaNj')\n",
     "print(a,b,c);print(abs(a));print(a.real);print(a.imag)  # complex number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.03"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3E-2  # scientific notation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'yes'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input(\"\\n\\n按下 enter 键后退出。\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x y\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('x', end=' ') # do not print new line\n",
+    "print('y')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.141592653589793\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math  # import math module\n",
+    "print(math.pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.141592653589793\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import *  # import all functions from math module\n",
+    "print(pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.141592653589793\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import pi as PI  # import pi as PI\n",
+    "print(PI)"
    ]
   }
  ],
