Refactor and reorganize Jupyter notebooks for Git, pip, and UV commands; remove obsolete files

--- a/Git/git.ipynb
+++ b/Git/git.ipynb
@@ -7,7 +7,9 @@
     "- ### Config\n",
     "`git config --global user.name \"huazhilianwu\"`\n",
     "\n",
-    "`git config --global user.email \"huazhilianwu@gmail.com\"`"
+    "`git config --global user.email \"huazhilianwu@gmail.com\"`\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -21,7 +23,9 @@
     "\n",
     "`git merge *branch*`\n",
     "\n",
-    "`git branch -d *branch-name*`\n"
+    "`git branch -d *branch-name*`\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -33,7 +37,9 @@
     "\n",
     "`git remote add origin *SSH key from github*`\n",
     "\n",
-    "`git clone *SSH key from github*`"
+    "`git clone *SSH key from github*`\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -41,7 +47,9 @@
    "metadata": {},
    "source": [
     "- ### Upload\n",
-    "`git pull`"
+    "`git pull`\n",
+    "\n",
+    "---\n"
    ]
   }
  ],
