--- a/Packages management/pip.ipynb
+++ b/Packages management/pip.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### pip3 version\n",
-    "`pip3 --version `\n",
+    "- ### pip version\n",
+    "`pip --version `\n",
     "\n",
     "---"
    ]
