--- a/Python_file/Data_type.ipynb
+++ b/Python_file/Data_type.ipynb
@@ -1,8 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### data type\n",
+    "Immutable: number / string / tuple\n",
+    "\n",
+    "Mutable: list / dictionary / set\n",
+    "\n",
+    "Other: Bool / bytes ...\n",
+    "\n",
+    " ---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### Number"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "341679d1-e77e-4f90-b499-d52507db1eef",
    "metadata": {},
    "outputs": [
@@ -11,8 +32,7 @@
      "output_type": "stream",
      "text": [
       "18\n",
-      "2.3333333333333335\n",
-      "2\n"
+      "2.3333333333333335\n"
      ]
     }
    ],
@@ -23,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +59,7 @@
    "source": [
     "print(7//3)  # integer division\n",
     "print(7 % 3)  # modulus\n",
-    "print(divmod(7, 3))  # division and modulus"
+    "print(divmod(7, 3))  # integer division and modulus"
    ]
   },
   {
@@ -82,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -347,60 +367,6 @@
    "source": [
     "print('x', end=' ') # do not print new line\n",
     "print('y')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.141592653589793\n"
-     ]
-    }
-   ],
-   "source": [
-    "import math  # import math module\n",
-    "print(math.pi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.141592653589793\n"
-     ]
-    }
-   ],
-   "source": [
-    "from math import *  # import all functions from math module\n",
-    "print(pi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.141592653589793\n"
-     ]
-    }
-   ],
-   "source": [
-    "from math import pi as PI  # import pi as PI\n",
-    "print(PI)"
    ]
   }
  ],
