--- a/Syntax/Data_type.ipynb
+++ b/Syntax/Data_type.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### data type\n",
+    "- ### Data type\n",
     "Immutable: number / string / tuple\n",
     "\n",
     "Mutable: list / dictionary / set\n",
@@ -23,7 +23,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'float'>\n",
+      "<class 'complex'>\n",
+      "<class 'str'>\n",
+      "<class 'bool'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'list'>\n",
+      "<class 'tuple'>\n",
+      "<class 'dict'>\n",
+      "<class 'set'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(1)) #integer\n",
+    "print(type(1.0)) #float\n",
+    "print(type(1 + 1j)) #complex\n",
+    "print(type(\"1\")) #string\n",
+    "print(type(True)) #boolean\n",
+    "print(type(None)) #NoneType\n",
+    "print(type([])) #list\n",
+    "print(type(())) #tuple\n",
+    "print(type({})) #dictionary\n",
+    "print(type(set())) #set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "341679d1-e77e-4f90-b499-d52507db1eef",
    "metadata": {},
    "outputs": [
@@ -32,7 +67,8 @@
      "output_type": "stream",
      "text": [
       "18\n",
-      "2.3333333333333335\n"
+      "2.3333333333333335\n",
+      "<class 'int'>\n"
      ]
     }
    ],
@@ -109,6 +145,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0.03\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(3E-2)  # scientific notation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3+4j) (3+4j) (-inf+nanj)\n",
+      "5.0\n",
+      "3.0\n",
+      "4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=complex('3+4j');b=complex(3,4);c=complex('-Infinity+NaNj')\n",
+    "print(a,b,c);print(abs(a));print(a.real);print(a.imag)  # complex number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
       "True\n",
       "False\n",
       "True\n"
@@ -116,27 +191,17 @@
     }
    ],
    "source": [
-    "print(3 < 5)\n",
+    "print(True==1);print(False==0)  # boolean\n",
     "print(3 == 5)\n",
     "print(3 != 5)  # comparison"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12 12\n"
-     ]
-    }
-   ],
    "source": [
-    "a,b=3,4; d=c=a*b \n",
-    "print(c,d)  # multiple statements in one line"
+    "---\n",
+    "- ### String"
    ]
   },
   {
@@ -198,6 +263,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "string1 string2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('string1', end=' ') # do not print new line\n",
+    "print('string2')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
    "outputs": [
@@ -241,8 +324,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "- ### Tuple"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 5, 'f')\n",
+      "1\n",
+      "f\n",
+      "(1, 3, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tuple=(1,2,3,4,5,'f');print(tuple)\n",
+    "print(tuple[0]);print(tuple[-1])  # tuple, immutable\n",
+    "print(tuple[::2])  # tuple slicing with steps 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "- ### List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -271,103 +392,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "- ### Dictionary"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 2, 3)\n",
-      "1\n",
-      "3\n"
-     ]
-    }
-   ],
-   "source": [
-    "tuple=(1,2,3);print(tuple)\n",
-    "print(tuple[0]);print(tuple[-1])  # tuple, immutable"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(3+4j) (3+4j) (-inf+nanj)\n",
-      "5.0\n",
-      "3.0\n",
-      "4.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "a=complex('3+4j');b=complex(3,4);c=complex('-Infinity+NaNj')\n",
-    "print(a,b,c);print(abs(a));print(a.real);print(a.imag)  # complex number"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.03"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "3E-2  # scientific notation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'yes'"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "input(\"\\n\\n按下 enter 键后退出。\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x y\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('x', end=' ') # do not print new line\n",
-    "print('y')"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
