Add new Python scripts for string manipulation and file operations; remove obsolete System.py file

--- a/Syntax/Data_type.ipynb
+++ b/Syntax/Data_type.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Mutable: list / dictionary / set\n",
     "\n",
-    "Other: Bool / bytes ...\n",
+    "Other: Boolen / bytes ...\n",
     "\n",
     " ---"
    ]
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "341679d1-e77e-4f90-b499-d52507db1eef",
    "metadata": {},
    "outputs": [
@@ -67,8 +67,7 @@
      "output_type": "stream",
      "text": [
       "18\n",
-      "2.3333333333333335\n",
-      "<class 'int'>\n"
+      "2.3333333333333335\n"
      ]
     }
    ],
@@ -79,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -175,28 +174,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n",
-      "False\n",
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(True==1);print(False==0)  # boolean\n",
-    "print(3 == 5)\n",
-    "print(3 != 5)  # comparison"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -206,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -354,6 +331,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "()\n",
+      "(1,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tuple=();print(tuple)  # empty tuple\n",
+    "tuple=(1,);print(tuple)  # tuple with one element"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -363,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -371,24 +367,41 @@
      "output_type": "stream",
      "text": [
       "[3, 5]\n",
-      "1\n",
-      "6\n",
+      "[1, 6]\n",
       "[1, 2, -3, 4, 5, 6]\n",
       "[1, 2, -3, 4, 5, 6, 6]\n",
       "[1, 2, -3, 4, 5, 6]\n",
       "[1, 2, -3, 4]\n",
-      "4\n",
-      "[[1, 'f'], [3, 4]]\n",
       "4\n"
      ]
     }
    ],
    "source": [
     "list=[1,2,3,4,5,6];print(list[2:-1:2]) # list slicing from pos 2 to pos -1(excluded) with step 2\n",
-    "print(list[0]);print(list[-1])  # list, mutable\n",
+    "print([list[0],list[-1]])  # list, mutable\n",
     "list[2]=-3;print(list);list.append(6);print(list);list.pop();print(list)  # list modification\n",
-    "list[-2:]=[];print(list);print(len(list))  # list shrink\n",
-    "list1=[1,'f'];list2=[3,4];list=[list1,list2];print(list);print(list[1][1])  # list nesting"
+    "list[-2:]=[];print(list);print(len(list))  # list shrink"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 'f'], [3, 4]]\n",
+      "4\n",
+      "[1, 'f', 1, 'f', 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1=[1,'f'];list2=[3,4]\n",
+    "list=[list1,list2];print(list);print(list[1][1])  # list nesting\n",
+    "list0=2*list1+list2;print(list0)  # list concatenation"
    ]
   },
   {
@@ -401,10 +414,230 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n",
+      "{'x': 'y'}\n",
+      "y\n"
+     ]
+    }
+   ],
+   "source": [
+    "d={};print(d)  # dictionary\n",
+    "d['x']='y';print(d);print(d['x'])  # dictionary modification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'A', 'age': 21, 'city': 'London'}\n",
+      "dict_keys(['name', 'age', 'city'])\n",
+      "dict_values(['A', 21, 'London'])\n",
+      "dict_items([('name', 'A'), ('age', 21), ('city', 'London')])\n",
+      "('city', 'London')\n",
+      "A None\n"
+     ]
+    }
+   ],
+   "source": [
+    "person={'name':'A','age':21,'city':'London'}\n",
+    "print(person)  # tiny dictionary\n",
+    "print(person.keys());print(person.values())  # dictionary keys and values\n",
+    "print(person.items());print(person.popitem())  # dictionary items\n",
+    "print(person.get('name'),person.get('salary'))  # prevents KeyError if key doesn't exist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name B\n",
+      "age 22\n",
+      "city Paris\n",
+      "\n",
+      "\n",
+      "name C\n",
+      "age 23\n",
+      "city Berlin\n"
+     ]
+    }
+   ],
+   "source": [
+    "person1=dict(name='B',age=22,city='Paris')\n",
+    "for key in person1:\n",
+    "    print(key,person1[key])  # dictionary iteration\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "person2=dict([('name','C'),('age',23),('city','Berlin')])\n",
+    "for key,value in person2.items():\n",
+    "    print(key, value)  # dictionary iteration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 0, 1: 1, 2: 4, 3: 9, 4: 16}\n",
+      "{0: 0, 1: 1, 2: 4, 3: 9, 4: 16}\n"
+     ]
+    }
+   ],
+   "source": [
+    "square={x:x**2 for x in range(5)};print(square)  # dictionary comprehension\n",
+    "square=dict((x,x**2) for x in range(5));print(square)  # dictionary comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 3, 'b': 2, 'c': 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict1 = {\"a\": 1, \"b\": 2}\n",
+    "dict2 = {\"a\": 3, \"c\": 4}\n",
+    "dict1.update(dict2);print(dict1)  # dictionary update"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "- ### Set\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n",
+      "{1, 2, 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "setnull=set();print(setnull)  # empty set\n",
+    "set1={1,2,3,3};print(set1)  # set excludes duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a', 'd', 'c', 'b'}\n",
+      "{'c', 'b'}\n",
+      "{'a'}\n",
+      "{'d', 'a'}\n",
+      "{'a', 'd'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1={'a','b','c'};s2={'b','c','d'}\n",
+    "print(s1|s2);print(s1&s2);print(s1-s2);print(s1^s2);print((s1|s2)-(s1&s2))  # set union, intersection, difference, union with not intersection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "- ### Boolen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True True\n",
+      "False True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(True==1,False==0)  # boolean\n",
+    "print(3 == 5,3 != 5)  # comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True False\n",
+      "1 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bool('a'),bool([]))  # boolean conversion\n",
+    "print(int(True),int(False))  # boolean conversion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False True False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(True and False,True or False,not True)  # logical operation"
+   ]
   }
  ],
  "metadata": {
