--- a/Syntax/Operation.ipynb
+++ b/Syntax/Operation.ipynb
@@ -17,11 +17,44 @@
     "a,b=3,4; d=c=a*b \n",
     "print(c,d)  # multiple statements in one line"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[1,2,3,4,5]\n",
+    "b=[a[i] for i in [1,3,4]]\n",
+    "print(b)  # list comprehension"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
