Add bytes handling examples to Data_type notebook and implement lowertocapital function

--- a/Syntax/Data_type.ipynb
+++ b/Syntax/Data_type.ipynb
@@ -638,6 +638,65 @@
    "source": [
     "print(True and False,True or False,not True)  # logical operation"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "- ### Bytes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'Hello'\n",
+      "b'HelloHiHi'\n",
+      "72 72\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'H'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=bytes('Hello',encoding='utf-8');print(x) #bytes\n",
+    "y=b'Hi';print(x+2*y)\n",
+    "print(x[0],ord('H'))  # byte indexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "65 90 97 122\n",
+      "72\n",
+      "H\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ord('A'),ord('Z'),ord('a'),ord('z'))  # ASCII\n",
+    "a=ord('H');print(a);print(chr(a))  # ord: ASCII to integer, chr: integer to ASCII"
+   ]
   }
  ],
  "metadata": {
