Fix typo in Data_type notebook and add new run notebook with execution instructions

--- a/Syntax/Data_type.ipynb
+++ b/Syntax/Data_type.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Mutable: list / dictionary / set\n",
     "\n",
-    "Other: Boolen / bytes ...\n",
+    "Other: Boolen / bytes\n",
     "\n",
     " ---"
    ]
